--- a/src/table-of-contents-plugin/plugin.scss
+++ b/src/table-of-contents-plugin/plugin.scss
@@ -40,9 +40,11 @@ html {
     scroll-behavior: smooth
 }
 
-.content-wrapper {
-    display: flex;
-    flex-direction: row;
+@media (min-width: 1000px) {
+    article .content-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 .exc-toc-container {
@@ -86,6 +88,7 @@ html {
     display: none;
     /* Safari and Chrome */
 }
+
 .exc-toc-container .exc-toc-container_wrapper::-webkit-scrollbar {
     display: none;
     /* Safari and Chrome */
